# aw-watcher-afk

./: .gitignore  .travis.yml  Makefile  README.md  __main__.py  afk.py  aw-watcher-afk.spec  pyproject.toml  requirements.txt  setup.py  start.sh  typecheck.sh
.github/workflows/: build.yml  codeql.yml
actwa/watchers/afk/: afk.py
aw/watchers/afk/: afk.py
aw_watcher_afk/: __init__.py  __main__.py  afk.py  config.py  evdev_devices.py  listeners.py  listeners_base.py  listeners_evdev.py  listeners_libinput.py  listeners_pynput.py  macos.py  main.py  unix.py  windows.py
docs/: transitions.dot
misc/: aw-watcher-afk.service
tests/: test_continuous_events.py  test_listener_health.py
