[tool.poetry]
name = "aw-watcher-afk"
version = "0.2.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"

[tool.poetry.scripts]
aw-watcher-afk = "aw_watcher_afk:main"

[tool.poetry.dependencies]
python = "^3.7"
aw-client = "^0.5"
pyobjc-framework-Quartz = { version = "^8.1", platform = "darwin" }
python-xlib = { version = "^0.28", platform = "linux" }
pynput = "^1.7.3"

[tool.poetry.dev-dependencies]
mypy = "*"
macholib = {version = "^1.13", platform = "darwin"}
pyinstaller = {version = "^4.3", optional = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
