[tool.poetry]
name = "aw-watcher-afk"
version = "0.2.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"

[tool.poetry.scripts]
aw-watcher-afk = "aw_watcher_afk:main"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
aw-client = "^0.5"
pyobjc-framework-Quartz = { version = "*", platform = "darwin" }
python-xlib = { version = "*", platform = "linux" }
pynput = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
macholib = {version = "*", platform = "darwin"}
pyinstaller = {version = "^5.2", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
